# contexte

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  contexte.yaml  corrupted_manifest.json  generate_codebase_prompt.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/corpora/security_findings/: private.md
benchmarks/corpora/simple_docs/: doc1.md
benchmarks/corpora/tables/: table1.md
benchmarks/expected/manifests/: bad_inputs.json  docx_tables.json  duplicates.json  pdf_text.json  security_findings.json  simple_docs.json  stale_conflicts.json  tables.json
benchmarks/tmp/: simple_docs.langchain.json  simple_docs.llamaindex.json
docs/: architecture.md  cli.md  getting-started.md  index.md  release.md  status.md  testing.md
docs/concepts/: chunking.md  context-ir.md  ctxpack.md  decoders.md  evaluation.md  extension_policy.md  plugin-api.md  provenance.md  security.md
docs/rfc/: 0000-project-spec.md  0001-context-ir.md  0002-ctxpack.md  0003-plugin-api.md
docs/schemas/: context-chunk.schema.json  context-document.schema.json  pack-manifest.schema.json
examples/ctxpack-to-jsonl/: README.md
examples/docs-to-mcp/: README.md
examples/local-docs-to-ctxpack/: README.md
examples/quickstart/docs/: faq.txt  handbook.md
scripts/: generate_schemas.py  run_benchmarks.py
src/contexte/: __init__.py  constants.py
src/contexte/chunkers/: __init__.py  base.py  fixed.py  heading.py  semantic_placeholder.py
src/contexte/cli/: app.py  console.py
src/contexte/core/: __init__.py  config.py  discovery.py  errors.py  hashing.py  ids.py  pipeline.py  signing.py
src/contexte/decoders/: __init__.py  base.py  csv.py  docx.py  html.py  json.py  markdown.py  (+3 more)
tests/: conftest.py
tests/integration/: test_benchmark_portability.py  test_pipeline_cli.py  test_sign_verify_cli.py
tests/test_keys/: contexte_private.pem  contexte_public.pem
tests/unit/: test_decoders_chunkers.py  test_ids_hashing.py  test_pack_reader_writer.py  test_redaction.py  test_security_scanners.py  test_signing.py  test_validate_schema_policy.py
tests/wrong_keys/: contexte_private.pem  contexte_public.pem
(+61 files in other folders)
